@@ -6,8 +6,13 @@
 	* generic/tclTest.c:                                deal with
 	* tests/expr-old.test:                              bignums (well, 
 	* tests/expr.test:                                  mostly).
+	Added a missing "errno=0;" in ExprUnaryFunc so that spurious
+	error returns aren't detected. 
 	Added test cases for Tcl_Expr* and Tcl_Expr*Obj because
 	there was very poor test coverage in those areas.
+	* generic/tclParseExpr.c: Reworked parsing of numbers to call
+	TclParseNumber rather than trying to do things locally.
+	* generic/tclStrToD.c: Corrected a comment.
 	
 2005-08-17  Don Porter  <dgp@users.sourceforge.net>
 
